--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   <!-- App -->
   <script defer src="js/state.js"></script>
   <script defer src="js/tts.js"></script>
-  <script defer src="js/app.js"></script>
+  <script defer src="js/app.js?v=10"></script>
 
   <!-- Header controls -->
   <script>
@@ -207,3 +207,4 @@
   </script>
 </body>
 </html>
+
