--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
   <script defer src="data/dataindex.js"></script>
 
   <!-- App -->
-  <script defer src="js/state.js"></script>
-  <script defer src="js/tts.js"></script>
-  <script defer src="js/app.js?v=10"></script>
+  <script defer src="js/state.js?v=12"></script>
+  <script defer src="js/tts.js?v=12"></script>
+  <script defer src="js/app.js?v=12"></script>
 
   <!-- Header controls -->
   <script>
