--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sori - Learn Korean</title>
 
-  <!-- Firebase -->
+  <!-- Firebase (compat) -->
   <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
   <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
   <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
@@ -34,6 +34,7 @@
 
     .card{border-radius:16px;padding:16px;margin:8px 0;box-shadow:0 2px 12px rgba(0,0,0,.04);background:#fff}
 
+    /* 4개 탭 (Saved 포함) */
     .category-tabs{display:grid;grid-template-columns:repeat(4,1fr);gap:6px;margin-bottom:8px}
     .tab-button{padding:10px 14px;border:2px solid #f3f4f6;border-radius:14px;background:#f9fafb;color:#9ca3af;cursor:pointer;font-size:13px;font-weight:700;transition:.2s}
     .tab-button:hover{background:#f3f4f6}
@@ -44,10 +45,12 @@
     .badge{display:inline-block;background:#7c3aed;color:#fff;padding:5px 10px;border-radius:10px;font-size:11px;font-weight:800}
     .context-box{background:#f9fafb;border-radius:8px;padding:6px 10px;margin-bottom:10px;font-size:12px;color:#6b7280;font-weight:600}
 
+    /* 상단 라인 + 스크랩 버튼 */
     .star-wrap{display:flex;justify-content:space-between;align-items:center}
     .icon-btn{
-      border:none;background:transparent;width:32px;height:32px;display:inline-flex;align-items:center;justify-content:center;
-      font-size:20px;line-height:1;padding:0;color:#9ca3af;cursor:pointer;border-radius:8px;
+      border:none !important;background:transparent !important;box-shadow:none !important;
+      width:28px;height:28px;display:inline-flex;align-items:center;justify-content:center;
+      font-size:18px;line-height:1;padding:0;color:#9ca3af;cursor:pointer;border-radius:8px;
     }
     .icon-btn:hover{background:#f3f4f6}
     .icon-btn.active{color:#d97706}
@@ -85,6 +88,10 @@
     .auth-section:not(.hidden){display:flex}
     .auth-card{max-width:360px;width:100%;padding:24px;border-radius:18px;background:#fff;box-shadow:0 18px 50px rgba(0,0,0,.35);position:relative;text-align:center}
     .auth-close{position:absolute;top:10px;right:10px;background:none;border:none;font-size:22px;color:#9ca3af;cursor:pointer}
+
+    /* 구글 버튼 내용이 안 보이는 현상 방지 */
+    .google-login-btn{display:inline-flex;gap:10px;align-items:center;border:2px solid #e5e7eb;background:#fff;border-radius:12px;padding:12px 16px;font-weight:600;cursor:pointer;color:#1f2937}
+    .google-login-btn svg{flex:0 0 auto}
 
     @media (max-width:640px){
       .category-tabs{grid-template-columns:1fr}
@@ -169,7 +176,16 @@
       <button class="auth-close" id="authClose" aria-label="Close">×</button>
       <div class="auth-title" style="font-weight:800;color:#7c3aed;">Sign in</div>
       <div class="auth-subtitle" style="font-size:13px;color:#9ca3af;">Use your Google account</div>
-      <button class="google-login-btn" onclick="handleGoogleLogin && handleGoogleLogin()" style="border:2px solid #e5e7eb;background:#fff;border-radius:12px;padding:12px 16px;font-weight:600;cursor:pointer;">Continue with Google</button>
+      <button class="google-login-btn" onclick="handleGoogleLogin && handleGoogleLogin()">
+        <!-- 간단한 G 아이콘 -->
+        <svg width="18" height="18" viewBox="0 0 48 48" aria-hidden="true">
+          <path fill="#FFC107" d="M43.6 20.5h-1.9V20H24v8h11.3C33.6 32.6 29.2 36 24 36c-6.6 0-12-5.4-12-12s5.4-12 12-12c3.1 0 5.9 1.2 8 3.1l5.7-5.7C34.2 6.6 29.4 4 24 4 12.9 4 4 12.9 4 24s8.9 20 20 20c10 0 19-7.3 19-20 0-1.2-.1-2.4-.4-3.5z"/>
+          <path fill="#FF3D00" d="M6.3 14.7l6.6 4.8C14.5 16.1 18.9 12 24 12c3.1 0 5.9 1.2 8 3.1l5.7-5.7C34.2 6.6 29.4 4 24 4 16 4 9.2 8.5 6.3 14.7z"/>
+          <path fill="#4CAF50" d="M24 44c5.1 0 9.9-1.9 13.5-5.1l-6.2-5.1C29.2 36 26.8 37 24 37c-5.1 0-9.5-3.4-11.1-8.1l-6.6 5C9.2 39.5 16 44 24 44z"/>
+          <path fill="#1976D2" d="M43.6 20.5H24v8h11.3c-1.3 3.7-4.7 6.5-8.7 6.5-5.1 0-9.5-3.4-11.1-8.1l-6.6 5C10 38.7 16.5 44 24 44c10 0 19-7.3 19-20 0-1.2-.1-2.4-.4-3.5z"/>
+        </svg>
+        <span>Continue with Google</span>
+      </button>
     </div>
   </div>
 
@@ -180,9 +196,9 @@
   <script defer src="data/dataindex.js"></script>
 
   <!-- App -->
-  <script defer src="js/state.js?v=12"></script>
-  <script defer src="js/tts.js?v=12"></script>
-  <script defer src="js/app.js?v=12"></script>
+  <script defer src="js/state.js?v=13"></script>
+  <script defer src="js/tts.js?v=13"></script>
+  <script defer src="js/app.js?v=13"></script>
 
   <!-- Header controls -->
   <script>
@@ -190,6 +206,7 @@
       const authModal = document.getElementById('authModal');
       const loginBtn = document.getElementById('loginBtn');
 
+      // Login / Logout
       loginBtn?.addEventListener('click', async () => {
         try{
           const u = (window.firebase?.auth && firebase.auth().currentUser) || null;
@@ -200,11 +217,16 @@
           }
         }catch(e){ console.warn(e); }
       });
+
       document.getElementById('authClose')?.addEventListener('click', () => {
+        authModal?.classList.add('hidden');
+      });
+
+      // 로그인 완료되면 모달 자동 닫기
+      window.addEventListener('sori-auth-changed', () => {
         authModal?.classList.add('hidden');
       });
     });
   </script>
 </body>
 </html>
-
