--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- Google tag -->
+  <meta charset="utf-8" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1" />
+  <title>Sori - Learn Korean</title>
+
+  <!-- (선택) Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-X1909BBKR5"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -10,97 +16,95 @@
     gtag('config', 'G-X1909BBKR5');
   </script>
 
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sori - Learn Korean</title>
-
-  <!-- Firebase (compat) -->
+  <!-- Firebase compat SDK들 (state.js가 compat 기반을 사용하므로 동일 버전 유지) -->
   <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
   <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
   <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 
   <style>
-    *{box-sizing:border-box}
+    *{ box-sizing: border-box; }
     body{
-      font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
-      max-width:680px;margin:0 auto;padding:12px;background:#faf8ff;min-height:100vh;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      max-width: 680px; margin: 0 auto; padding: 12px;
+      background: #faf8ff; min-height: 100vh;
     }
-    h1{font-size:24px;margin:0 0 4px 0;color:#7c3aed;font-weight:800}
-    .intro{color:#9ca3af;font-size:12px;margin-bottom:10px;line-height:1.3;font-weight:500}
+    h1{ font-size: 24px; margin: 0 0 4px; color: #7c3aed; font-weight: 800; }
+    .intro{ color:#9ca3af; font-size:12px; margin-bottom:10px; line-height:1.3; font-weight:500; }
 
-    .header-container{display:flex;justify-content:space-between;align-items:center;margin-bottom:8px}
-    .top-btn{padding:6px 12px;border-radius:10px;font-size:12px;font-weight:700;cursor:pointer;border:0}
-    .top-btn.primary{background:#7c3aed;color:#fff}
+    /* header */
+    .header{ display:flex; justify-content:space-between; align-items:center; margin-bottom:10px; }
+    .top-btn{ padding:6px 12px; border-radius:10px; font-size:12px; font-weight:700; border:0; cursor:pointer; }
+    .top-btn.primary{ background:#7c3aed; color:#fff; }
 
-    .card{border-radius:16px;padding:16px;margin:8px 0;box-shadow:0 2px 12px rgba(0,0,0,.04);background:#fff}
+    /* cards / tabs */
+    .card{ background:#fff; border-radius:16px; padding:16px; margin:8px 0; box-shadow:0 2px 12px rgba(0,0,0,.05); }
+    .category-tabs{ display:grid; grid-template-columns:repeat(4,1fr); gap:6px; }
+    .tab-button{
+      padding:10px 14px; border:2px solid #f3f4f6; border-radius:14px; background:#f9fafb;
+      color:#9ca3af; font-size:13px; font-weight:700; cursor:pointer; transition:.2s;
+    }
+    .tab-button:hover{ background:#f3f4f6; }
+    .tab-button.active{ background:#7c3aed; color:#fff; border-color:#7c3aed; box-shadow:0 2px 8px rgba(124,58,237,.2); }
 
-    /* 4개 탭 (Saved 포함) */
-    .category-tabs{display:grid;grid-template-columns:repeat(4,1fr);gap:6px;margin-bottom:8px}
-    .tab-button{padding:10px 14px;border:2px solid #f3f4f6;border-radius:14px;background:#f9fafb;color:#9ca3af;cursor:pointer;font-size:13px;font-weight:700;transition:.2s}
-    .tab-button:hover{background:#f3f4f6}
-    .tab-button.active{background:#7c3aed;color:#fff;border-color:#7c3aed;box-shadow:0 2px 8px rgba(124,58,237,.2)}
+    .sub-filters{ display:none; margin-top:8px; }
 
-    .sub-filters{display:none} /* app.js에서 필요 시 표시 */
-
-    .badge{display:inline-block;background:#7c3aed;color:#fff;padding:5px 10px;border-radius:10px;font-size:11px;font-weight:800}
-    .context-box{background:#f9fafb;border-radius:8px;padding:6px 10px;margin-bottom:10px;font-size:12px;color:#6b7280;font-weight:600}
-
-    /* 상단 라인 + 스크랩 버튼 */
-    .star-wrap{display:flex;justify-content:space-between;align-items:center}
+    /* badge / star */
+    .row-between{ display:flex; justify-content:space-between; align-items:center; gap:8px; }
+    .badge{ display:inline-block; background:#7c3aed; color:#fff; font-size:11px; font-weight:800; padding:5px 10px; border-radius:10px; }
     .icon-btn{
-      border:none !important;background:transparent !important;box-shadow:none !important;
-      width:28px;height:28px;display:inline-flex;align-items:center;justify-content:center;
-      font-size:18px;line-height:1;padding:0;color:#9ca3af;cursor:pointer;border-radius:8px;
+      border:none; background:transparent; width:32px; height:32px;
+      display:inline-flex; align-items:center; justify-content:center;
+      font-size:20px; line-height:1; color:#9ca3af; cursor:pointer; border-radius:8px;
     }
-    .icon-btn:hover{background:#f3f4f6}
-    .icon-btn.active{color:#d97706}
+    .icon-btn:hover{ background:#f3f4f6; }
+    .icon-btn.active{ color:#d97706; } /* 저장된 별 */
 
-    .korean-section{background:#f9fafb;border-radius:14px;padding:16px 12px;margin:8px 0}
-    .target-display{font-size:28px;font-weight:900;color:#1f2937;text-align:center;line-height:1.2;margin-bottom:6px}
-    .english-translation{color:#6b7280;font-size:16px;text-align:center;margin-bottom:10px;font-weight:600}
-    .pronunciation-hint{color:#9ca3af;font-size:13px;font-weight:600;text-align:center;letter-spacing:.3px;font-style:italic}
+    .context{ background:#f9fafb; border-radius:8px; padding:6px 10px; margin-top:8px; color:#6b7280; font-size:12px; font-weight:600; }
 
-    button{padding:12px 18px;border:0;border-radius:14px;background:#7c3aed;color:#fff;cursor:pointer;font-size:15px;font-weight:800;width:100%;
-      box-shadow:0 2px 8px rgba(124,58,237,.2);transition:.2s}
-    button:hover{background:#6d28d9;box-shadow:0 4px 12px rgba(124,58,237,.25)}
-    button.secondary{background:#f9fafb;color:#6b7280;box-shadow:0 1px 3px rgba(0,0,0,.08)}
-    button.secondary:hover{background:#f3f4f6}
+    /* main text */
+    .kbox{ background:#f9fafb; border-radius:14px; padding:16px 12px; margin:12px 0; }
+    .ko{ font-size:28px; font-weight:900; color:#1f2937; text-align:center; margin:0 0 6px; }
+    .en{ color:#6b7280; font-size:16px; text-align:center; margin:0 0 10px; font-weight:600; }
+    .pr{ color:#9ca3af; font-size:13px; font-style:italic; text-align:center; margin:0; }
 
-    .button-group{display:grid;grid-template-columns:1fr 1fr;gap:6px;margin-top:8px}
+    /* practice */
+    .practice{ background:#f9fafb; border-radius:10px; padding:10px; }
+    .practice-label{ font-size:12px; font-weight:600; color:#6b7280; text-align:center; margin:0 0 8px; }
+    .dots{ display:flex; gap:6px; justify-content:center; margin-bottom:8px; }
+    .rep-dot{ width:32px; height:32px; border-radius:50%; border:2px solid #e5e7eb; background:#fff; display:flex; align-items:center; justify-content:center; }
+    .rep-dot.completed{ background:#7c3aed; border-color:#7c3aed; }
 
-    .repetition-tracker{margin:8px 0;padding:10px;background:#f9fafb;border-radius:10px}
-    .repetition-label{font-size:12px;font-weight:600;color:#6b7280;margin-bottom:8px;text-align:center}
-    .repetition-dots{display:flex;gap:5px;justify-content:center;margin-bottom:8px}
-    .rep-dot{width:32px;height:32px;border-radius:50%;border:2px solid #e5e7eb;background:#fff;display:flex;align-items:center;justify-content:center;font-size:14px;transition:.3s}
-    .rep-dot.completed{background:#7c3aed;border-color:#7c3aed;transform:scale(1.1)}
+    /* buttons */
+    button.big{ width:100%; padding:12px 18px; border-radius:14px; border:0; cursor:pointer; font-weight:800; font-size:15px; background:#7c3aed; color:#fff; box-shadow:0 2px 8px rgba(124,58,237,.2); }
+    button.big:hover{ background:#6d28d9; }
+    .error{ display:none; background:#fee2e2; color:#991b1b; font-size:11px; font-weight:600; padding:8px 12px; border-radius:8px; margin-top:8px; }
 
-    .voice-speed{display:flex;align-items:center;justify-content:center;gap:8px;margin-top:8px;padding:8px;background:#f9fafb;border-radius:8px}
-    .voice-speed label{color:#7c3aed;font-size:12px;font-weight:600}
-    .voice-speed input{width:110px;cursor:pointer}
-    .voice-speed span{color:#7c3aed;font-weight:700;font-size:12px;min-width:45px}
+    .row{ display:flex; align-items:center; justify-content:center; gap:8px; background:#f9fafb; border-radius:8px; padding:8px; margin-top:8px; }
+    .row label{ color:#7c3aed; font-size:12px; font-weight:600; }
+    .row span{ color:#7c3aed; font-size:12px; font-weight:700; min-width:42px; text-align:right; }
 
-    .practice-tip{background:#fffbeb;border-left:3px solid #f59e0b;padding:8px 12px;border-radius:10px;margin-top:8px;font-size:12px;color:#92400e;line-height:1.4;font-weight:500}
-    .progress{text-align:center;color:#7c3aed;font-size:13px;font-weight:700;margin-top:8px}
-    .error-msg{background:#fee2e2;color:#991b1b;padding:8px 12px;border-radius:8px;margin-top:8px;font-size:11px;font-weight:600;display:none}
+    .nav{ display:grid; grid-template-columns:1fr 1fr; gap:6px; }
+    .secondary{ background:#f9fafb; color:#6b7280; border:0; padding:12px 18px; border-radius:14px; font-weight:800; }
+    .secondary:hover{ background:#f3f4f6; }
+    .progress{ text-align:center; color:#7c3aed; font-size:13px; font-weight:700; margin-top:8px; }
 
-    /* 로그인 모달 */
-    .auth-section{display:none;position:fixed;inset:0;background:rgba(0,0,0,.45);align-items:center;justify-content:center;z-index:9999;padding:16px}
-    .auth-section:not(.hidden){display:flex}
-    .auth-card{max-width:360px;width:100%;padding:24px;border-radius:18px;background:#fff;box-shadow:0 18px 50px rgba(0,0,0,.35);position:relative;text-align:center}
-    .auth-close{position:absolute;top:10px;right:10px;background:none;border:none;font-size:22px;color:#9ca3af;cursor:pointer}
+    /* congrats */
+    .cong{ display:none; margin:8px 0; text-align:center; background:linear-gradient(135deg,#fef3c7 0%,#fde68a 100%); border-radius:10px; padding:12px; }
+    .cong.show{ display:block; }
 
-    /* 구글 버튼 내용이 안 보이는 현상 방지 */
-    .google-login-btn{display:inline-flex;gap:10px;align-items:center;border:2px solid #e5e7eb;background:#fff;border-radius:12px;padding:12px 16px;font-weight:600;cursor:pointer;color:#1f2937}
-    .google-login-btn svg{flex:0 0 auto}
+    /* auth modal */
+    .auth{ display:none; position:fixed; inset:0; background:rgba(0,0,0,.45); align-items:center; justify-content:center; z-index:9999; padding:16px; }
+    .auth:not(.hidden){ display:flex; }
+    .auth-card{ background:#fff; width:100%; max-width:360px; border-radius:18px; padding:24px; box-shadow:0 18px 50px rgba(0,0,0,.35); text-align:center; position:relative; }
+    .auth-close{ position:absolute; top:10px; right:10px; background:none; border:none; font-size:22px; color:#9ca3af; cursor:pointer; }
+    .gbtn{ background:#fff; border:2px solid #e5e7eb; border-radius:12px; padding:12px 16px; font-weight:600; cursor:pointer; }
 
-    @media (max-width:640px){
-      .category-tabs{grid-template-columns:1fr}
-    }
+    @media (max-width:640px){ .category-tabs{ grid-template-columns:1fr; } }
   </style>
 </head>
 <body>
-  <!-- Header -->
-  <div class="header-container">
+  <!-- HEADER -->
+  <header class="header">
     <div>
       <h1>Sori <span style="font-size:14px;color:#9ca3af;font-weight:600;">(beta)</span></h1>
       <div class="intro">Master Korean with K-Drama lines and daily conversations</div>
@@ -108,123 +112,112 @@
     <div>
       <button id="loginBtn" class="top-btn primary">Login</button>
     </div>
-  </div>
+  </header>
 
-  <!-- Tabs -->
-  <div class="card">
+  <!-- TABS -->
+  <section class="card">
     <div class="category-tabs">
-      <button class="tab-button active" id="dailyBtn">Daily</button>
-      <button class="tab-button" id="travelBtn">Travel</button>
-      <button class="tab-button" id="dramaBtn">K-Drama</button>
-      <button class="tab-button" id="savedBtn">★ Saved</button>
+      <button id="dailyBtn"  class="tab-button active">Daily</button>
+      <button id="travelBtn" class="tab-button">Travel</button>
+      <button id="dramaBtn"  class="tab-button">K-Drama</button>
+      <button id="savedBtn"  class="tab-button">★ Saved</button>
     </div>
     <div id="subFilters" class="sub-filters"></div>
-  </div>
+  </section>
 
-  <!-- Lesson card -->
-  <div class="card">
-    <div class="star-wrap">
-      <div class="badge" id="badge">Greeting</div>
+  <!-- LESSON -->
+  <section class="card">
+    <div class="row-between">
+      <div id="badge" class="badge">Greeting</div>
       <button id="scrapBtn" class="icon-btn" title="Save this phrase">☆</button>
     </div>
 
-    <div class="context-box" id="context">Conversation: First meeting</div>
+    <div id="context" class="context">Conversation: First meeting</div>
 
-    <div class="korean-section">
-      <div class="target-display" id="korean">안녕하세요.</div>
-      <div class="english-translation" id="english">"Hello"</div>
-      <div class="pronunciation-hint" id="pronunciation">annyeonghaseyo</div>
+    <div class="kbox">
+      <p id="korean" class="ko">안녕하세요.</p>
+      <p id="english" class="en">"Hello"</p>
+      <p id="pronunciation" class="pr">annyeonghaseyo</p>
     </div>
 
-    <div class="repetition-tracker">
-      <div class="repetition-label">Practice Count: <span id="repCount">0</span> / 5</div>
-      <div class="repetition-dots" id="repDots">
-        <div class="rep-dot" id="dot1"></div>
-        <div class="rep-dot" id="dot2"></div>
-        <div class="rep-dot" id="dot3"></div>
-        <div class="rep-dot" id="dot4"></div>
-        <div class="rep-dot" id="dot5"></div>
+    <div class="practice">
+      <p class="practice-label">Practice Count: <span id="repCount">0</span> / 5</p>
+      <div class="dots">
+        <div class="rep-dot"></div>
+        <div class="rep-dot"></div>
+        <div class="rep-dot"></div>
+        <div class="rep-dot"></div>
+        <div class="rep-dot"></div>
       </div>
     </div>
 
-    <button id="playBtn">Listen & Repeat</button>
-    <div class="error-msg" id="errorMsg"></div>
+    <div id="congrats" class="cong">🎉 Great job!</div>
 
-    <div class="voice-speed">
-      <label>Speed:</label>
-      <input type="range" id="speed" min="0.3" max="1.0" step="0.1" value="0.75">
+    <button id="playBtn" class="big">Listen & Repeat</button>
+    <div id="errorMsg" class="error"></div>
+
+    <div class="row">
+      <label for="speed">Speed:</label>
+      <input id="speed" type="range" min="0.3" max="1.0" step="0.1" value="0.75" />
       <span id="speedTxt">0.75x</span>
     </div>
 
-    <div class="practice-tip">
-      Tip: Listen carefully and repeat multiple times. Consistency is key.
+    <div class="card" style="margin-top:10px; background:#fffbeb; border-left:3px solid #f59e0b;">
+      <div style="font-size:12px; color:#92400e; font-weight:500;">
+        Tip: Listen carefully and repeat multiple times. Consistency is key.
+      </div>
     </div>
-  </div>
+  </section>
 
-  <!-- Navigation -->
-  <div class="card">
-    <div class="button-group">
-      <button class="secondary" id="prevBtn">◀ Previous</button>
-      <button class="secondary" id="nextBtn">▶ Next</button>
+  <!-- NAV -->
+  <section class="card">
+    <div class="nav">
+      <button id="prevBtn" class="secondary">◀ Previous</button>
+      <button id="nextBtn" class="secondary">▶ Next</button>
     </div>
-    <div class="progress" id="prog">1 / 30</div>
-  </div>
+    <div id="prog" class="progress">1 / 30</div>
+  </section>
 
-  <!-- Login modal -->
-  <div class="auth-section hidden" id="authModal">
+  <!-- AUTH MODAL -->
+  <div id="authModal" class="auth hidden">
     <div class="auth-card">
-      <button class="auth-close" id="authClose" aria-label="Close">×</button>
-      <div class="auth-title" style="font-weight:800;color:#7c3aed;">Sign in</div>
-      <div class="auth-subtitle" style="font-size:13px;color:#9ca3af;">Use your Google account</div>
-      <button class="google-login-btn" onclick="handleGoogleLogin && handleGoogleLogin()">
-        <!-- 간단한 G 아이콘 -->
-        <svg width="18" height="18" viewBox="0 0 48 48" aria-hidden="true">
-          <path fill="#FFC107" d="M43.6 20.5h-1.9V20H24v8h11.3C33.6 32.6 29.2 36 24 36c-6.6 0-12-5.4-12-12s5.4-12 12-12c3.1 0 5.9 1.2 8 3.1l5.7-5.7C34.2 6.6 29.4 4 24 4 12.9 4 4 12.9 4 24s8.9 20 20 20c10 0 19-7.3 19-20 0-1.2-.1-2.4-.4-3.5z"/>
-          <path fill="#FF3D00" d="M6.3 14.7l6.6 4.8C14.5 16.1 18.9 12 24 12c3.1 0 5.9 1.2 8 3.1l5.7-5.7C34.2 6.6 29.4 4 24 4 16 4 9.2 8.5 6.3 14.7z"/>
-          <path fill="#4CAF50" d="M24 44c5.1 0 9.9-1.9 13.5-5.1l-6.2-5.1C29.2 36 26.8 37 24 37c-5.1 0-9.5-3.4-11.1-8.1l-6.6 5C9.2 39.5 16 44 24 44z"/>
-          <path fill="#1976D2" d="M43.6 20.5H24v8h11.3c-1.3 3.7-4.7 6.5-8.7 6.5-5.1 0-9.5-3.4-11.1-8.1l-6.6 5C10 38.7 16.5 44 24 44c10 0 19-7.3 19-20 0-1.2-.1-2.4-.4-3.5z"/>
-        </svg>
-        <span>Continue with Google</span>
-      </button>
+      <button id="authClose" class="auth-close" aria-label="Close">×</button>
+      <div style="font-size:24px; font-weight:800; color:#7c3aed; margin-bottom:6px;">Sign in</div>
+      <div style="font-size:13px; color:#9ca3af; margin-bottom:18px;">Use your Google account</div>
+      <button class="gbtn" onclick="window.handleGoogleLogin && window.handleGoogleLogin()">Continue with Google</button>
     </div>
   </div>
 
-  <!-- Data -->
+  <!-- DATA (반드시 앱 로직보다 먼저) -->
   <script defer src="data/daily.js"></script>
-  <script defer src="data/drama.js"></script>
   <script defer src="data/travel.js"></script>
+  <script defer src="data/drama.js"></script>
   <script defer src="data/dataindex.js"></script>
 
-  <!-- App -->
-  <script defer src="js/state.js?v=13"></script>
-  <script defer src="js/tts.js?v=13"></script>
-  <script defer src="js/app.js?v=13"></script>
+  <!-- APP SCRIPTS (순서 중요: state -> tts -> app) -->
+  <script defer src="js/state.js"></script>
+  <script defer src="js/tts.js"></script>
+  <script defer src="js/app.js"></script>
 
-  <!-- Header controls -->
+  <!-- Header 버튼/모달만 담당 -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      const authModal = document.getElementById('authModal');
+      const modal = document.getElementById('authModal');
       const loginBtn = document.getElementById('loginBtn');
 
-      // Login / Logout
       loginBtn?.addEventListener('click', async () => {
         try{
           const u = (window.firebase?.auth && firebase.auth().currentUser) || null;
-          if(u && window.SoriUser?.logout){
+          if (u && window.SoriUser?.logout) {
             await window.SoriUser.logout();
-          }else{
-            authModal?.classList.remove('hidden');
+          } else {
+            modal?.classList.remove('hidden');
           }
         }catch(e){ console.warn(e); }
       });
 
       document.getElementById('authClose')?.addEventListener('click', () => {
-        authModal?.classList.add('hidden');
-      });
-
-      // 로그인 완료되면 모달 자동 닫기
-      window.addEventListener('sori-auth-changed', () => {
-        authModal?.classList.add('hidden');
+        modal?.classList.add('hidden');
       });
     });
   </script>
