--- a/index.html
+++ b/index.html
@@ -247,5 +247,79 @@
       });
     });
   </script>
+
+  <script>
+/* ====== Sori Nav Patch: cross-category + index reset ====== */
+(function(){
+  const nextBtn = document.getElementById('nextBtn');
+  const prevBtn = document.getElementById('prevBtn');
+  const progEl  = document.getElementById('prog');
+
+  const catButtons = [
+    document.getElementById('dailyBtn'),
+    document.getElementById('travelBtn'),
+    document.getElementById('dramaBtn'),
+    // savedBtn은 넘김 흐름에서 제외
+  ];
+
+  function getProgress(){
+    // "5 / 5" 같은 텍스트 파싱
+    const m = (progEl?.textContent || '').match(/(\d+)\s*\/\s*(\d+)/);
+    if(!m) return {i:1,total:1};
+    return {i: parseInt(m[1],10), total: parseInt(m[2],10)};
+  }
+
+  function activeCatIndex(){
+    return catButtons.findIndex(b => b?.classList.contains('active'));
+  }
+
+  function goFirstCard(){
+    // 내부 state를 모를 수 있으니 Prev를 연속 클릭해서 1/로 맞춤
+    const {i} = getProgress();
+    for(let k=1; k<i; k++){
+      prevBtn?.click();
+    }
+    // 혹시 렌더 타이밍 문제 대비, 한 번 더 보정
+    setTimeout(() => {
+      const again = getProgress().i;
+      for(let k=1; k<again; k++){
+        prevBtn?.click();
+      }
+    }, 0);
+  }
+
+  // 1) 5/5에서 Next 누르면 다음 카테고리 1/로 이동
+  nextBtn?.addEventListener('click', function(e){
+    const {i, total} = getProgress();
+    if(i >= total){
+      // 기본 next 동작 막고 다음 카테고리로 전환
+      e.preventDefault();
+      e.stopImmediatePropagation();
+
+      const idx = activeCatIndex();
+      const nextIdx = (idx + 1) % catButtons.length; // saved 제외한 순환
+      const nextBtnCat = catButtons[nextIdx];
+      if(nextBtnCat){
+        nextBtnCat.click();     // 기존 app.js 탭 전환 로직 재사용
+        setTimeout(goFirstCard, 0); // 전환 후 1/로 보정
+      }
+    }
+  }, true); // capture로 걸어 기존 핸들러보다 먼저 체크
+
+  // 2) 카테고리 클릭 시 항상 1/부터 시작
+  catButtons.forEach(btn=>{
+    btn?.addEventListener('click', () => {
+      // 탭 전환 렌더가 끝난 후 보정
+      setTimeout(goFirstCard, 0);
+    });
+  });
+
+  // 혹시 사용자가 Saved 눌렀다가 다시 돌아올 때도 1/로 시작하고 싶다면 아래 주석 해제
+  // document.getElementById('savedBtn')?.addEventListener('click', () => setTimeout(goFirstCard, 0));
+})();
+</script>
+
+  
 </body>
 </html>
+
