--- a/index.html
+++ b/index.html
@@ -248,78 +248,132 @@
     });
   </script>
 
-  <script>
-/* ====== Sori Nav Patch: cross-category + index reset ====== */
+ <script>
+/* ===== Sori Navigation Rewrite: items → sub → category ===== */
 (function(){
-  const nextBtn = document.getElementById('nextBtn');
-  const prevBtn = document.getElementById('prevBtn');
+  const btn = {
+    next: document.getElementById('nextBtn'),
+    prev: document.getElementById('prevBtn'),
+    daily: document.getElementById('dailyBtn'),
+    travel: document.getElementById('travelBtn'),
+    drama: document.getElementById('dramaBtn'),
+  };
   const progEl  = document.getElementById('prog');
+  const badgeEl = document.getElementById('badge');     // 서브카테고리 이름 표시(Greeting 등)
+  const tabs = [btn.daily, btn.travel, btn.drama].filter(Boolean);
 
-  const catButtons = [
-    document.getElementById('dailyBtn'),
-    document.getElementById('travelBtn'),
-    document.getElementById('dramaBtn'),
-    // savedBtn은 넘김 흐름에서 제외
-  ];
+  // 상위 카테고리 id → SORI_DATA 키 매핑
+  const CAT_KEY = {
+    dailyBtn:  'daily',
+    travelBtn: 'travel',
+    dramaBtn:  'drama'
+  };
+
+  function getActiveTab(){
+    return tabs.find(t => t.classList.contains('active')) || btn.daily;
+  }
+  function getActiveCatKey(){
+    const tab = getActiveTab();
+    return CAT_KEY[tab.id];
+  }
 
   function getProgress(){
-    // "5 / 5" 같은 텍스트 파싱
+    // "3 / 5" → {i:3,total:5}
     const m = (progEl?.textContent || '').match(/(\d+)\s*\/\s*(\d+)/);
     if(!m) return {i:1,total:1};
-    return {i: parseInt(m[1],10), total: parseInt(m[2],10)};
+    return { i: parseInt(m[1],10), total: parseInt(m[2],10) };
   }
 
-  function activeCatIndex(){
-    return catButtons.findIndex(b => b?.classList.contains('active'));
-  }
-
-  function goFirstCard(){
-    // 내부 state를 모를 수 있으니 Prev를 연속 클릭해서 1/로 맞춤
-    const {i} = getProgress();
-    for(let k=1; k<i; k++){
-      prevBtn?.click();
+  // 현재 카테고리의 서브카테고리 순서를 데이터에서 산출
+  function subOrderOf(catKey){
+    const arr = (window.SORI_DATA && window.SORI_DATA[catKey]) || [];
+    const order = [];
+    for(const x of arr){
+      const s = x?.sub || 'Default';
+      if(!order.includes(s)) order.push(s);
     }
-    // 혹시 렌더 타이밍 문제 대비, 한 번 더 보정
-    setTimeout(() => {
+    return order;
+  }
+
+  // 현재 화면의 서브카테고리 이름
+  function currentSubName(){
+    return (badgeEl?.textContent || '').trim();
+  }
+
+  // 렌더 후 첫 아이템으로 이동하는 보정
+  function goFirstItem(){
+    // 현재 페이지 i를 읽어 i>1이면 prev를 i-1번 눌러 1/로 맞춘다
+    const {i} = getProgress();
+    for(let k=1; k<i; k++) btn.prev?.click();
+    // 렌더 타이밍 보정
+    setTimeout(()=>{
       const again = getProgress().i;
-      for(let k=1; k<again; k++){
-        prevBtn?.click();
-      }
+      for(let k=1; k<again; k++) btn.prev?.click();
     }, 0);
   }
 
-  // 1) 5/5에서 Next 누르면 다음 카테고리 1/로 이동
-  nextBtn?.addEventListener('click', function(e){
+  // 서브칩 클릭 유틸
+  function clickSubChipByName(name){
+    const chips = Array.from(document.querySelectorAll('#subFilters .sub-chip'));
+    const target = chips.find(c => (c.textContent || '').trim() === name)
+                || chips.find(c => (c.textContent || '').includes(name));
+    if(target) target.click();
+  }
+
+  // 현재 카테고리의 "첫 서브칩 → 첫 아이템"으로 이동
+  function goFirstSubAndItem(){
+    // 서브칩이 렌더되기 직후를 고려해 두 단계로 보정
+    setTimeout(()=>{
+      const firstChip = document.querySelector('#subFilters .sub-chip');
+      if(firstChip) firstChip.click();
+      setTimeout(goFirstItem, 0);
+    }, 0);
+  }
+
+  // 1) Next 버튼 재정의: 아이템 끝 → 다음 서브 → 다음 카테고리
+  btn.next?.addEventListener('click', function onNext(e){
     const {i, total} = getProgress();
-    if(i >= total){
-      // 기본 next 동작 막고 다음 카테고리로 전환
-      e.preventDefault();
-      e.stopImmediatePropagation();
+    if(i < total) return; // 아직 서브 내 아이템 남아있으면 기본 동작
 
-      const idx = activeCatIndex();
-      const nextIdx = (idx + 1) % catButtons.length; // saved 제외한 순환
-      const nextBtnCat = catButtons[nextIdx];
-      if(nextBtnCat){
-        nextBtnCat.click();     // 기존 app.js 탭 전환 로직 재사용
-        setTimeout(goFirstCard, 0); // 전환 후 1/로 보정
-      }
+    // 여기 도달하면 "서브의 마지막 아이템" 상태
+    e.preventDefault();
+    e.stopImmediatePropagation();
+
+    const catKey = getActiveCatKey();
+    const subs = subOrderOf(catKey);
+    const curSub = currentSubName();
+    const curSubIdx = Math.max(0, subs.indexOf(curSub));
+
+    // 다음 서브가 있으면 그걸로
+    if(curSubIdx > -1 && curSubIdx < subs.length - 1){
+      const nextSubName = subs[curSubIdx + 1];
+      clickSubChipByName(nextSubName);
+      setTimeout(goFirstItem, 0);
+      return;
     }
-  }, true); // capture로 걸어 기존 핸들러보다 먼저 체크
 
-  // 2) 카테고리 클릭 시 항상 1/부터 시작
-  catButtons.forEach(btn=>{
-    btn?.addEventListener('click', () => {
-      // 탭 전환 렌더가 끝난 후 보정
-      setTimeout(goFirstCard, 0);
+    // 서브도 마지막이면 다음 상위 카테고리로
+    const curTab = getActiveTab();
+    const idx = tabs.indexOf(curTab);
+    const nextIdx = (idx + 1) % tabs.length;
+    tabs[nextIdx].click();
+    // 새 카테고리에서 첫 서브의 첫 아이템
+    goFirstSubAndItem();
+  }, true); // capture로 등록해 기존 핸들러보다 우선
+
+  // 2) 사용자가 탭을 직접 눌러도 항상 첫 서브 1/부터
+  tabs.forEach(t=>{
+    t?.addEventListener('click', ()=>{
+      goFirstSubAndItem();
     });
   });
 
-  // 혹시 사용자가 Saved 눌렀다가 다시 돌아올 때도 1/로 시작하고 싶다면 아래 주석 해제
-  // document.getElementById('savedBtn')?.addEventListener('click', () => setTimeout(goFirstCard, 0));
 })();
 </script>
+
 
   
 </body>
 </html>
+
 
