--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Sori - Learn Korean</title>
 
   <!-- Google Analytics (GA4) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-X1909BBKR5"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-X1Q98DBKR5"></script>
   <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){ dataLayer.push(arguments); }
@@ -471,6 +471,7 @@
   
 </body>
 </html>
+
 
 
 
